--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -10,7 +10,24 @@
     <%= javascript_importmap_tags %>
   </head>
 
+  <header>
+    <nav>
+        <% if user_signed_in? %>
+          <strong><%= current_user.email %></strong>
+          <%= link_to 'プロフィール変更', edit_user_registration_path %>
+          <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete } %>
+        <% else %>
+          <%= link_to 'サインアップ', new_user_registration_path %>
+          <%= link_to 'ログイン', new_user_session_path %>
+        <% end %>
+    </nav>
+  </header>
+
   <body>
+    <%= notice %>
+    <%= alert %>
+
     <%= yield %>
+    <%= javascript_importmap_tags %>
   </body>
 </html>
