--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -10,18 +10,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC&family=Noto+Serif+TC&display=swap" rel="stylesheet">
-
-    <style>
-      .notosanssc {
-        font-family: 'Noto Serif SC', serif;
-      }
-      .notosanstc {
-        font-family: 'Noto Serif TC', serif;
-      }
-    </style>
+    <%= render 'shared/notosans' %>
 
   </head>
 
@@ -31,6 +20,7 @@
 
       <% if user_signed_in? %>
         <div class="navbar-brand"><%= current_user.email %></div>
+        <div class="navbar-brand">言語：<%= current_user.setting.letter_kind_i18n %></div>
       <% else %>
         <div class="navbar-brand">ログインしていません</div>
       <% end %>
