--- a/src/app/views/static_pages/index.html.erb
+++ b/src/app/views/static_pages/index.html.erb
@@ -1,15 +1,3 @@
 <h1>Chenyu-Test Top Page!!</h1>
-<button type="button" class="btn">ボタン</button>
 
-<div class="btn-group">
-  <button type="button" class="btn btn-danger dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-    Action
-  </button>
-  <ul class="dropdown-menu">
-    <li><a class="dropdown-item" href="#">Action</a></li>
-    <li><a class="dropdown-item" href="#">Another action</a></li>
-    <li><a class="dropdown-item" href="#">Something else here</a></li>
-    <li><hr class="dropdown-divider"></li>
-    <li><a class="dropdown-item" href="#">Separated link</a></li>
-  </ul>
-</div>
+<a class="btn btn-primary  btn-lg" href="exercise_ask" role="button">出題する</a>
