・gem configを導入 ・言語設定による出題モジュールの改良

--- a/src/app/views/exercise/ask.html.erb
+++ b/src/app/views/exercise/ask.html.erb
@@ -24,6 +24,7 @@
   <input type="hidden" name="question_id" value="<%= @question.id %>" />
   <input type="hidden" name="choices_join" value="<%= @choices_join %>" />
   <input type="hidden" name="input_answer" value="<%= @input_answer %>" />
+  <input type="hidden" name="use_letter_kind" value="<%= @use_letter_kind %>" />
   
   <div class="form-group">
     <label for="answer">４文字で答えを入力してください</label>
