--- a/src/app/views/exercise/result.html.erb
+++ b/src/app/views/exercise/result.html.erb
@@ -10,5 +10,6 @@
 <% else %>
   <h1><font color="blue">残念、不正解！</font></h1>
 <% end %>
-
-<a class="btn btn-primary" href="exercise_ask" role="button">もう一度！</a>
+<br />
+もう一度！
+<%= render 'shared/ask_question_button' %>
