--- a/src/app/views/static_pages/index.html.erb
+++ b/src/app/views/static_pages/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Chenyu-Test Top Page!!</h1>
+<br />
+<%= render 'shared/ask_question_button' %>
 
-<a class="btn btn-primary  btn-lg" href="exercise_ask" role="button">出題する</a>
