--- a/src/app/views/exercise/ask.html.erb
+++ b/src/app/views/exercise/ask.html.erb
@@ -20,7 +20,7 @@
 
 <button type="button" class="btn btn-danger btn-lg" onclick="DeleteAnswerText();">一字削除</button>
 
-<%= form_with(url: exercise_judgement_path, local: true, data: { turbo: false }) do |f| %>
+<%= form_with(url: exercise_judgement_path, local: true) do |f| %>
   <input type="hidden" name="question_id" value="<%= @question.id %>" />
   <input type="hidden" name="choices_join" value="<%= @choices_join %>" />
   <input type="hidden" name="input_answer" value="<%= @input_answer %>" />
