--- a/src/app/views/static_pages/index.html.erb
+++ b/src/app/views/static_pages/index.html.erb
@@ -1,4 +1,8 @@
 <h1>Chenyu-Test Top Page!!</h1>
 <br />
-<%= render 'shared/ask_question_button' %>
-
+成語を聞く問題<br />
+<%= render 'shared/ask_chengyu_button' %>
+<br />
+<br />
+意味を聞く問題<br />
+<%= render 'shared/ask_mean_button' %>
