--- a/src/app/views/exercise/result_mean.html.erb
+++ b/src/app/views/exercise/result_mean.html.erb
@@ -1,10 +1,11 @@
 [問題ID]<%= @question.id %><br />
 <br />
-[入力された答え]<div class="notosans"><%= @input_answer %></div><br />
-[正しい答え]<div class="notosans"><%= @true_answer %></div><br />
+[問題]<div class="notosans"><%= @question.chengyu_lang_setting(@use_letter_kind) %></div>
+[入力された答え]<%= @input_answer.mean %><br />
+[正しい答え]<%= @question.mean %><br />
 <br />
 [正答判定]<br />
-<% if @input_answer == @true_answer %>
+<% if @input_answer.id == @question.id %>
   <font color="red">正解！</font>
 <% else %>
   <font color="blue">残念、不正解！</font>
@@ -12,6 +13,6 @@
 <br />
 <br />
 もう一度やってみる？<br />
-<%= render 'shared/ask_chengyu_button' %>
+<%= render 'shared/ask_mean_button' %>
 <br />
 <%= link_to "Topへ戻る", root_path, class: "btn btn-light btn-lg" %>
