・間違ったことのある問題から出題するシステムの構築

--- a/src/app/views/shared/_flash_message.html.erb
+++ b/src/app/views/shared/_flash_message.html.erb
@@ -1,3 +1,8 @@
+<% if flash[:success] %>
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <%= flash[:success] %>
+  </div>
+<% end %>
 <% if flash[:danger] %>
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <%= flash[:danger] %>
