--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -20,9 +20,8 @@
 
       <% if user_signed_in? %>
         <div class="navbar-brand"><%= current_user.email %></div>
-        <div class="navbar-brand">言語：<%= current_user.setting.letter_kind_i18n %></div>
       <% else %>
-        <div class="navbar-brand">ログインしていません</div>
+        <div class="navbar-brand">未ログイン</div>
       <% end %>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,14 +32,14 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <% if user_signed_in? %>
               <li class="nav-item">
-                <%= link_to 'プロフィール変更', edit_user_registration_path, class: 'nav-link' %>
+                <%= link_to '設定変更', settings_edit_path, class: 'nav-link' %>
               </li>
               <li class="nav-item">
                 <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: 'nav-link' %>
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to 'サインアップ', new_user_registration_path, class: 'nav-link' %>
+                <%= link_to 'サインアップ(新規作成)', new_user_registration_path, class: 'nav-link' %>
               </li>
               <li class="nav-item">
                 <%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %>
