・データベースの回答データから、正答率を算出するモジュールの作成

--- a/src/app/views/static_pages/index.html.erb
+++ b/src/app/views/static_pages/index.html.erb
@@ -9,3 +9,11 @@
 <br />
 <br />
 <%= render 'shared/test_format_change' %>
+<br />
+
+
+<% if user_signed_in? %>
+  <%= link_to "プロフィールを見る", profile_path, class: "btn btn-primary btn-lg" %>
+<% else %>
+  未ログイン<br />
+<% end %>
