--- a/src/app/views/profiles/index.html.erb
+++ b/src/app/views/profiles/index.html.erb
@@ -16,4 +16,6 @@
 <%= render 'shared/display_correct_rate', rate: rate_mean, cor: cor_mean, res: res_mean %>
 <br />
 <%= link_to "回答履歴一覧を見る", responses_index_path, class: "btn btn-primary btn-lg" %>
-<%= link_to "デイリーの回答履歴を見る", responses_daily_path, class: "btn btn-primary btn-lg" %>
+<%= link_to "デイリーの回答履歴を見る", responses_daily_path, class: "btn btn-primary btn-lg" %><br />
+<br />
+<%= render 'shared/navigate_button_except_question' %>
