・成語詳細画面にブックマークボタン(お気に入りボタン、もう覚えたから出題しなくていいよボタン)を設置 ・「もう覚えたから出題しなくていいよ」出題ロジックの実装 ・bootstrapで実装したページネーションの日本語化 ・バグ修正

--- a/src/app/views/exercises/result_chengyu.html.erb
+++ b/src/app/views/exercises/result_chengyu.html.erb
@@ -2,7 +2,6 @@
 <br />
 [入力された答え]<div class="notosans"><%= @input_answer %></div><br />
 [正しい答え]<div class="notosans"><%= @true_answer %></div><br />
-<br />
 [正答判定]<br />
 <% if @input_answer == @true_answer %>
   <font color="red">正解！</font>
@@ -11,7 +10,7 @@
 <% end %>
 <br />
 <br />
-<%= render partial: "favorite_button", locals: { question: @question }%>
+<%= render partial: "shared/favorite_button", locals: { question: @question }%>
 <br />
 <br />
 もう一度やってみる？<br />
