--- a/src/app/views/exercises/result_mean.html.erb
+++ b/src/app/views/exercises/result_mean.html.erb
@@ -11,7 +11,7 @@
   <font color="blue">残念、不正解！</font>
 <% end %>
 <br />
-<%= render partial: "favorite_button", locals: { question: @question }%>
+<%= render partial: "shared/favorite_button", locals: { question: @question }%>
 <br />
 <br />
 もう一度やってみる？<br />
