--- a/src/app/views/questions/show.html.erb
+++ b/src/app/views/questions/show.html.erb
@@ -44,6 +44,12 @@
         </span>
       </td>
     </tr>
+    <tr>
+      <td></td>
+      <td>
+        <%= render partial: "shared/favorite_button", locals: { question: @question }%>
+      </td>
+    </tr>
 
   </tbody>
 </table>
