・成語一覧画面の実装 ・各一覧画面でのお気に入りボタン、既知リスト入りボタンを搭載(同期更新での実装) ・バグ修正

--- a/src/app/views/exercises/result_chengyu.html.erb
+++ b/src/app/views/exercises/result_chengyu.html.erb
@@ -2,6 +2,9 @@
 <br />
 [入力された答え]<div class="notosans"><%= @input_answer %></div><br />
 [正しい答え]<div class="notosans"><%= @true_answer %></div><br />
+
+[ピンイン] <%= @question.pinyin %><br />
+
 [正答判定]<br />
 <% if @input_answer == @true_answer %>
   <font color="red">正解！</font>
