--- a/src/app/views/responses/daily.html.erb
+++ b/src/app/views/responses/daily.html.erb
@@ -23,5 +23,5 @@
 
   </tbody>
 </table>
-<%= paginate @dates, theme: 'bootstrap-5' %><br />
+<%= paginate @dates, theme: 'bootstrap-5', pagination_class: "justify-content-center" %><br />
 <%= render 'shared/navigate_button_except_question' %>
