--- a/src/app/views/profiles/index.html.erb
+++ b/src/app/views/profiles/index.html.erb
@@ -18,4 +18,8 @@
 <%= link_to "回答履歴一覧を見る", responses_index_path, class: "btn btn-primary btn-lg" %>
 <%= link_to "デイリーの回答履歴を見る", responses_daily_path, class: "btn btn-primary btn-lg" %><br />
 <br />
+<%= link_to "お気に入り一覧を見る", bookmarks_path(flg: Constants.bookmark_flg.favorite), class: "btn btn-primary btn-lg" %>
+<%= link_to "既知リストを見る", bookmarks_path(flg: Constants.bookmark_flg.known), class: "btn btn-primary btn-lg" %><br />
+<br />
+
 <%= render 'shared/navigate_button_except_question' %>
