--- a/src/app/views/shared/_test_format_change.html.erb
+++ b/src/app/views/shared/_test_format_change.html.erb
@@ -5,6 +5,8 @@
       全ての問題から出題する<br />
     <% when Constants.test_kind.mistake then %>
     過去間違えた問題から出題する<br />
+    <% when Constants.test_kind.favorite then %>
+    お気に入り問題から出題する<br />
   <% end %>
 <% else %>
   ログインすると回答記録が保存され、間違った問題を復習できるようになります。<br />
