--- a/src/app/views/shared/_test_format_change.html.erb
+++ b/src/app/views/shared/_test_format_change.html.erb
@@ -9,5 +9,5 @@
     お気に入り問題から出題する<br />
   <% end %>
 <% else %>
-  ログインすると回答記録が保存され、間違った問題を復習できるようになります。<br />
+  →アカウントを作りログインすると回答記録が保存され、間違った問題を復習できるようになります。<br />
 <% end %>
