バグ・誤植修正

--- a/src/app/views/static_pages/index.html.erb
+++ b/src/app/views/static_pages/index.html.erb
@@ -15,7 +15,7 @@
 <br />
 プロファイル<br />
 <% if user_signed_in? %>
-  <%= link_to "設定を見る", profiles_path, class: "btn btn-primary btn-lg" %><br />
+  <%= link_to "成績・設定を見る", profiles_path, class: "btn btn-primary btn-lg" %><br />
 <% else %>
 →アカウントを作りログインすると設定が保存できるようになります。<br />
 <% end %>
