・deviseでメールを使ってのパスワード更新システムの構築 ・deviseにbootstrapの適用 ・devise独自のエラーメッセージのデザイン改良

--- a/src/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/src/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>こんにちは <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>こちらは「成語テスト」です。</p>
 
-<p><%= link_to 'Change my password', edit_user_password_url(@resource, reset_password_token: @token) %></p>
+<p>あなたのアカウントに対し、パスワードのリセットがリクエストされました。</p>
 
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= link_to 'このリンクをクリックして、パスワードを変更してください。', edit_user_password_url(@resource, reset_password_token: @token) %></p>
+
+<p>なお、パスワードはログイン中の設定変更ページか、パスワードリセットを通してのみ変更が可能です。</p>
