--- a/src/app/views/shared/_flash_message.html.erb
+++ b/src/app/views/shared/_flash_message.html.erb
@@ -1,10 +1,18 @@
 <% if flash[:success] %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <%= flash[:success] %>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
 <% if flash[:danger] %>
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
     <%= flash[:danger] %>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<% end %>
+<% if flash[:notice] %>
+  <div class="alert alert-primary alert-dismissible fade show" role="alert">
+    <%= flash[:notice] %>
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% end %>
