--- a/src/app/views/devise/registrations/edit.html.erb
+++ b/src/app/views/devise/registrations/edit.html.erb
@@ -1,13 +1,17 @@
-<h1><%= t('.title', resource: resource_name.to_s.humanize) %></h1>
+<h1>ユーザ情報編集</h1>
 
+この画面では、登録されているメールアドレスとパスワードを変更できます<br />
+変更したい情報と、現在のパスワードを入力して、更新ボタンを押してください<br />
+<br />
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= bootstrap_devise_error_messages! %>
 
   <div class="form-group">
     <%= f.label :email %>
     <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+    <small class="form-text text-muted"><%= t('.same_email_if_you_don_t_want_to_change_it') %></small>
   </div>
-
+  <br />
   <div class="form-group">
   <%= t('.new_password') %>
     <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control' %>
@@ -18,20 +22,20 @@
   <div class="form-group">
     <%= f.label :password_confirmation %>
     <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control'  %>
+    <small class="form-text text-muted"><%= t('.leave_blank_if_you_don_t_want_to_change_it_confirmation') %></small>
   </div>
-
+  <br />
   <div class="form-group">
     <%= f.label :current_password %>
     <%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
 
     <small class="form-text text-muted"><%= t('.we_need_your_current_password_to_confirm_your_changes') %></small>
   </div>
-
+  <br />
   <div class="form-group">
     <%= f.submit t('.update'), class: 'btn btn-primary' %>
   </div>
 <% end %>
-
-<p><%= link_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete %></p>
-
+<br />
+<p><%= link_to t('.cancel_my_account'), registration_path(resource_name), data: { turbo_method: :delete, confirm: t('.are_you_sure') } %></p>
 <%= link_to t('.back'), :back %>
