--- a/src/app/views/devise/registrations/new.html.erb
+++ b/src/app/views/devise/registrations/new.html.erb
@@ -18,13 +18,13 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation %>
+  <%= t('devise.registrations.new.password_reinput') %>
     <%= f.password_field :password_confirmation, autocomplete: 'current-password', class: 'form-control' %>
   </div>
-
+  <br />
   <div class="form-group">
     <%= f.submit t('.sign_up'), class: 'btn btn-primary' %>
   </div>
 <% end %>
-
+<br />
 <%= render 'devise/shared/links' %>
