--- a/src/app/views/layouts/application.html.erb
+++ b/src/app/views/layouts/application.html.erb
@@ -27,21 +27,25 @@
           <ul class="navbar-nav">
           </ul>
           <ul class="navbar-nav ms-auto">
-            <% if user_signed_in? %>
-              <div class="navbar-brand"><%= current_user.email %></div>
-              <li class="nav-item">
-                <%= link_to '設定変更', settings_edit_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: 'nav-link' %>
-              </li>
+            <% if Rails.env.production? %>
+              現在開発中のため、アカウントは作れません
             <% else %>
-              <li class="nav-item">
-                <%= link_to 'サインアップ(新規作成)', new_user_registration_path, class: 'nav-link' %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %>
-              </li>
+              <% if user_signed_in? %>
+                <div class="navbar-brand"><%= current_user.email %></div>
+                <li class="nav-item">
+                  <%= link_to '設定変更', settings_edit_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to 'ログアウト', destroy_user_session_path, data: { turbo_method: :delete }, class: 'nav-link' %>
+                </li>
+              <% else %>
+                <li class="nav-item">
+                  <%= link_to 'サインアップ(新規作成)', new_user_registration_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to 'ログイン', new_user_session_path, class: 'nav-link' %>
+                </li>
+              <% end %>
             <% end %>
           </ul>
         </div>
