・ユーザのサインイン、退会に関するテストの作成 ・退会時に再確認用のポップアップを表示するように修正 ・その他、リンクやボタンにIDを追加

--- a/src/app/views/devise/registrations/edit.html.erb
+++ b/src/app/views/devise/registrations/edit.html.erb
@@ -37,5 +37,7 @@
   </div>
 <% end %>
 <br />
-<p><%= link_to t('.cancel_my_account'), registration_path(resource_name), data: { turbo_method: :delete, confirm: t('.are_you_sure') } %></p>
+<p><%= link_to t('.cancel_my_account'), registration_path(resource_name), \
+  data: { turbo_method: :delete, turbo_confirm: "本当にアカウントを削除しますか？\n保存されていたデータは全て利用できなくなります", \
+  cancel: 'やめる', commit: '削除する'}, title: '削除確認' %></p>
 <%= link_to t('.back'), :back %>
