--- a/src/app/views/exercises/ask_chengyu.html.erb
+++ b/src/app/views/exercises/ask_chengyu.html.erb
@@ -4,8 +4,8 @@
 <br />
 [文字をタップして、成語を作成してください(文字は重複する可能性があります)]
 <div class="notosans">
-  <% @choices.each do |c| %>
-    <button type="button" class="btn btn-primary btn-lg" onclick="InputAnswerText('<%= c %>');">
+  <% @choices.each_with_index do |c, i| %>
+    <button type="button" class="btn btn-primary btn-lg" id="answer<%= i %>" onclick="InputAnswerText('<%= c %>');">
       <%= c %>
     </button>
   <% end %>
