・本番環境でgmailを使ってメール送信 ・送信メールの細かい言い回しやフォームデータ修正

--- a/src/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/src/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -7,3 +7,11 @@
 <p><%= link_to 'このリンクをクリックして、パスワードを変更してください。', edit_user_password_url(@resource, reset_password_token: @token) %></p>
 
 <p>なお、パスワードはログイン中の設定変更ページか、パスワードリセットを通してのみ変更が可能です。</p>
+
+<p>※もし本登録にお心あたりが無い方は、 chengyutestweb@gmail.com にご連絡をお願いいたします。</p>
+
+<p>
+---------- <br />
+成語テスト <br />
+http://www.chengyu-test.site <br />
+</p>
