--- a/src/app/views/user_mailer/welcome_email.html.erb
+++ b/src/app/views/user_mailer/welcome_email.html.erb
@@ -1,4 +1,4 @@
-<p>こんにちは <%= @email %>!</p>
+<p>こんにちは <%= @email %> さん！</p>
 
 <p>こちらは「成語テスト」です。</p>
 
@@ -6,4 +6,15 @@
 
 <p>以後はホームページの右側からログインして、コンテンツをお楽しみください。</p>
 
-<p>※もしお心あたりが無い方は、<%= @url %> よりご連絡をお願いいたします。</p>
+<p>
+※現在テスト運用中のため chengyutestweb@gmail.com を利用していますが、<br />
+　以後〜@chengyu-test.siteからメールが送られる可能性もありますのでご注意ください。
+</p>
+
+<p>※もし本登録にお心あたりが無い方は、 chengyutestweb@gmail.com にご連絡をお願いいたします。</p>
+
+<p>
+---------- <br />
+成語テスト <br />
+http://www.chengyu-test.site <br />
+</p>
